tests/NormalTests/paczka1/small_fuzzy/77171480.err
Error in line 1: IZtn66P A263 8,0
Error in line 15: S638 A856 48,3
